test/fail/type-instantiation-reversed.grace
type B = A.match(object {}).andAlso { type {} }
type A = {}
